--- a/autoML/autoML.ipynb
+++ b/autoML/autoML.ipynb
@@ -839,7 +839,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Binary Classifier -Hospital_Acquired_Infection"
+        "## Binary Classifier -Healthcare Associated Infections"
       ],
       "metadata": {
         "id": "PNv-o8hxvyfU"
